<resources>
    <string name="app_name">Adore</string>
    <!-- Strings related to login -->
    <string name="heading_login">LOGIN</string>
    <string name="heading_signup">Signup</string>
    <string name="prompt_name">Name <font color="red">*</font></string>
    <string name="prompt_phone_no">Mobile no <font color="red">*</font></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password <font color="red">*</font></string>
    <string name="prompt_confirm_password">Confirm password <font color="red">*</font></string>
    <string name="prompt_dob">Birth date</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="forgot_password">Forgot password</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_user">New user? </string>
    <string name="invalid_mobile_no_or_password">Invalid mobile no or password</string>
    <string name="click_here">Click here</string>
    <string name="save_details">SAVE DETAILS</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="shop_now">SHOP NOW!</string>

    <!-- nav -->
    <string name="search">Search</string>

    <!--Category-->
    <string name="heading_shop">Shop</string>
    <string name="heading_search">Search</string>
    <string name="heading_category">Categories</string>
    <string name="heading_category_men">Men\'s Collection</string>
    <string name="heading_category_women">Women\'s Collection</string>

    <!--Men's category-->
    <string name="heading_men_category">MEN</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="shirts">Shirts</string>
    <string name="jeans">Jeans</string>
    <string name="formal_wear">Formal wear</string>
    <string name="track_pants">Track Pants</string>
    <string name="ethnic_wear">Ethnic Wear</string>
    <string name="sports_wear">Sports Wear</string>
    <string name="inner_wear">Inner Wear</string>

    <!--Slide-->
    <string name="seasonal_collections">Seasonal Collections with 10% off!</string>
    <string name="festive_collections">Festive Collections</string>
    <string name="casuals">Tops &amp; Tees | Jeans </string>
    <string name="Dresses_and_jumpsuits">Dresses | Jumpsuits</string>

    <!--Women's category-->
    <string name="heading_women_category">WOMEN</string>
    <string name="tops_and_tees">Tops &amp; Tees</string>
    <string name="kurtas">Kurtas</string>
    <string name="Dresses">Dresses</string>
    <string name="ethnic_sets">Ethnic Wear</string>
    <string name="Bottom_wear">Bottom Wear</string>
    <string name="lingerie">Lingerie</string>

    <!--Varieties-->
    <string name="heading_varieties">VARIETIES</string>

    <!--icons-->
    <string name="favourites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="user_profile">Profile</string>

    <!--user profile-->
    <string name="user_data">Profile details</string>
    <string name="account_details">Account Details</string>
    <string name="account_address">Address</string>
    <string name="add_address">Add new address!</string>
    <string name="account_orders">Orders</string>
    <string name="logout">LOGOUT</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="discard">DISCARD</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>

    <!--product detail &#9825;-->
    <string name="add_to_cart">ADD TO CART</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="add_to_favo">ADD TO FAVO</string>
    <string name="added_to_favo"><font color="red">FAVOURED</font> &#10084;</string>


    <string name="heading_size">Size</string>
    <string name="size_xs">XS</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="size_xl">XL</string>

    <!--product preview-->
    <string name="product_preview_name">Product name</string>
    <string name="product_preview_description">Product description provided here</string>
    <string name="product_preview_price">Rs.2799</string>


    <!-- Size -->
    <string name="size_view">Size: %s</string>
    <string name="quantity">Qty: %s</string>
    <string name="size_not_chosen_message">You haven\'t chosen any size yet!</string>

    <!-- Cart -->
    <string name="checkout">CHECKOUT NOW</string>
    <string name="delivery_charge"><![CDATA[<font color="black"><small>Delivery Charge: Rs. </small></font><big>%s</big>]]></string>
    <string name="total_price"><![CDATA[<font color="black"><small>Total: Rs.</small></font><big>%s</big>]]></string>
    <string name="order_placed">Your order is placed!</string>

    <!--Address details-->
    <string name="address_deleted">Address discarded</string>
    <string name="address_added">Address Inserted!</string>
    <string name="deliver_to">Deliver to<font color="red">*</font></string>
    <string name="contact">Contact<font color="red">*</font></string>
    <string name="address_line">Address line<font color="red">*</font></string>
    <string name="locality">Locality<font color="red">*</font></string>
    <string name="city">City<font color="red">*</font></string>
    <string name="pincode">Pincode<font color="red">*</font></string>
    <string name="state">State<font color="red">*</font></string>
    <string name="address_type">Address type<font color="red">*</font></string>
    <string name="state_name">TAMILNADU</string>

    <!--Order-->
    <string name="order_success">SUCCESS</string>
    <string name="view_orders">Click to View Order</string>
    <string name="heading_orders">Orders</string>
    <string name="heading_orders_details">Order Details</string>
    <string name="order_id">TRACK ORDER: %s </string>
    <string name="order_status"><![CDATA[<font color="black"><small>Order Status: </small></font><big>%s</big>]]></string>
    <string name="product_type">Product type</string>
    <string name="none">None</string>
    <string name="search_hint">Search..</string>


</resources>