<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_product_image"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/rectangle"
            app:srcCompat="@drawable/men_casuals" />


        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:maxLines="2"
            android:padding="5dp"
            android:text="@string/product_preview_name"
            android:textColor="@color/black"
            android:textSize="@dimen/preview_product_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_product_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bree_serif"
            android:maxLines="2"
            android:padding="5dp"
            android:text="@string/product_preview_description"
            android:textSize="@dimen/preview_product_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_product_image"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_product_image"
            app:layout_constraintTop_toBottomOf="@id/tv_product_description">

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one"
                android:padding="5dp"
                android:text="@string/product_preview_price"
                android:textColor="@color/red"
                android:textSize="@dimen/preview_product_font_size"
                android:textStyle="bold"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/tv_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/fredoka_one"
                android:padding="5dp"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="@dimen/preview_product_font_size"
                android:textStyle="bold"
                android:layout_toStartOf="@id/tv_selected_size"/>


            <TextView
                android:id="@+id/tv_selected_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one"
                android:padding="5dp"
                android:text="@string/size_view"
                android:textColor="@color/black"
                android:textSize="@dimen/preview_product_font_size"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:padding="5dp"
            android:text="@string/order_status"
            android:textColor="@color/red"
            android:textSize="@dimen/preview_product_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_product_image"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>