<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/rectangle"
            app:srcCompat="@drawable/men_casuals" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/product_preview_name"
            android:textColor="@color/black"
            android:textSize="@dimen/preview_product_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bree_serif"
            android:text="@string/product_preview_description"
            android:textSize="10sp" />


        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:paddingTop="5dp"
            android:text="@string/product_preview_price"
            android:textColor="@color/red"
            android:textSize="@dimen/preview_product_font_size"
            android:textStyle="bold"
            android:textAlignment="textEnd"/>

    </LinearLayout>

</layout>