<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/heading_login"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_ftil_et_mobile_no"
            />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_heading"
            app:layout_constraintBottom_toTopOf="@+id/login_ftil_et_mobile_no"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_ftil_et_mobile_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart = "20dp"
            android:layout_marginEnd = "20dp"
            android:layout_marginTop = "20dp"
            android:hint="@string/prompt_phone_no"
            app:layout_constraintBottom_toTopOf="@+id/login_ftil_et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_fet_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_ftil_et_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin = "20dp"
            android:hint="@string/prompt_password"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_ftil_et_mobile_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_fet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_bg"
            android:padding="10dp"
            android:text="@string/action_login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_create_new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/new_user"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_click_here"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/click_here"
            android:textColor="@color/yellow_700"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_create_new_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>